--- a/src/medicos.html
+++ b/src/medicos.html
@@ -44,7 +44,23 @@
                     </td>
                 </tr>
             </table>
+            <h1 class="titulo-principal">Añadir Médico</h1>
+            <form action="" id="formulario-medico" class="form">
+                <input type="text" name="nombre" id="nombre" placeholder="Introduce su nombre" class="caja">
+                <input type="text" name="consultorio" id="consultorio" placeholder="Introduce su consultorio" class="caja">
+                <select name="especiañidad" id="especialida" class="sangre">
+                    <option value="">Introduce su Especialidad</option>
+                    <option value="Ginecología">Ginecología</option>
+                    <option value="Cardiología">Cardiología</option>
+                    <option value="Endocrinología">Endocrinología</option>
+                    <option value="Gastroenterología">Gastroenterología</option>
+                    <option value="Dermatología">Dermatología</option>
+                    <option value="Medicina-familiar">Medicina familiar</option>
 
+                </select>
+
+                <input type="submit" value="Añadir" class="añadir">
+            </form>
         </main>
         <aside class="lateral">
             <img src="assets/img/cr.png" alt="">
@@ -57,12 +73,7 @@
                     <li>
                         <a href="medicos.html" style="color: yellow;">Ver Médicos Disponibles</a>
                     </li>
-                    <li>
-                        <a href="añadir-paciente.html">Añadir Paciente</a>
-                    </li>
-                    <li>
-                        <a href="añadir-medico.html">Añadir Médico</a>
-                    </li>
+
 
                 </ul>
             </div>
